[project]
name = "polyclean-workspace"
version = "0.1.0"
description = "PolyClean example workspace (uv + python-polylith loose theme)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "aiosqlite>=0.19",
  "httpx>=0.27",
  "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith]
namespace = "polyclean"

[tool.polylith.structure]
theme = "loose"

[tool.polylith.bricks]
"bases/polyclean/publishing_api" = "polyclean/publishing_api"
"components/polyclean/posts_contract" = "polyclean/posts_contract"
"components/polyclean/instagram_publish_adapter" = "polyclean/instagram_publish_adapter"
"components/polyclean/create_post_flow" = "polyclean/create_post_flow"
"components/polyclean/instagram_contract" = "polyclean/instagram_contract"
"components/polyclean/publish_post_flow" = "polyclean/publish_post_flow"
"components/polyclean/sqlite_post_adapter" = "polyclean/sqlite_post_adapter"
"components/polyclean/rest_adapter_lib" = "polyclean/rest_adapter_lib"
"bases/polyclean/pokemon_card_api" = "polyclean/pokemon_card_api"
"components/polyclean/sqlite_pokemon_card_adapter" = "polyclean/sqlite_pokemon_card_adapter"
"components/polyclean/pokemon_card_flow" = "polyclean/pokemon_card_flow"
"components/polyclean/pokemon_card_contract" = "polyclean/pokemon_card_contract"
[dependency-groups]
dev = [
  "polylith-cli>=1.0.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.5.0",
  "grimp>=3.0.0",
  "types-requests>=2.31.0",
  "ty>=0.0.21",
]
